--- a/DIA 3/index2.html
+++ b/DIA 3/index2.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yessica</title>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/style2.css">
 </head>
 <body>
     <div class="contenido">
         <div class="informacion">
             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
-            <p class="uno"> Comprar Tarjeta</p>
-            <a class="dos" href="index2.html"> Ver Saldo</a>
+            <a class="uno" href="index.html"> Comprar Tarjeta</a>
+            <p class="dos"> Ver Saldo</p>
             <img class="B" src="imagenes/Icon ionic-ios-search.png" alt="">
-            <h1>_________________</h1>
+            <img class="C" src="imagenes/Icon feather-shopping-cart.png">
+            <h1>________________</h1>
         </div>
         <img class="tarjeta" src="imagenes/Metrolinea.png" alt="">
         <div class="tema">
             <img class="uno" src="imagenes/Icon ionic-ios-arrow-up.png" alt="">
             <img class="dos" src="imagenes/Icon ionic-ios-arrow-down.png" alt="">
-            <img class="tres" src="imagenes/Menu.png" alt="">
-            <p> Cantidad</p>
+            <img class="tres" src="imagenes/Dinero.png" alt="">
+            <p> Valor</p>
         </div>
         <div class="cuadrado">
-             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
-             <p> Comprar</p>
+            <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
+            <p> compra </p>
         </div>
-        <div class="compra">
-             <h2> Tarjeta Metrolinea (saldo $3000 COP) </h2>
-             <p> $3000 COP </p>
+        <div class="saldo">
+            <h2> Tarjeta Metrolinea de Yessica Perez </h2>
+            <p> Saldo Actual = $3000 COP </p>
+            <p> Saldo Escogido </p>
+            <input type="text" class="Entrada" placeholder="$1500">
         </div>
     </div>
+    
 </body>
 </html>
