--- a/DIA 3/index.html
+++ b/DIA 3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yessica</title>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="contenido">
@@ -12,8 +12,8 @@
             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
             <p class="uno"> Comprar Tarjeta</p>
             <a class="dos" href="index2.html"> Ver Saldo</a>
-            <img class="B" src="imagenes/Icon ionic-ios-search.png" alt="">
-            <h1>_________________</h1>
+            <img id="informacionB" src="imagenes/Icon ionic-ios-search.png" alt="">
+            <h1 id="linea">_____________</h1>
         </div>
         <img class="tarjeta" src="imagenes/Metrolinea.png" alt="">
         <div class="tema">
