--- a/DIA 3/index2.html
+++ b/DIA 3/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yessica</title>
-    <link rel="stylesheet" href="style/style2.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="contenido">
@@ -12,7 +12,7 @@
             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
             <a class="uno" href="index.html"> Comprar Tarjeta</a>
             <p class="dos"> Ver Saldo</p>
-            <img class="B" src="imagenes/Icon ionic-ios-search.png" alt="">
+            <img id="informacionB" src="imagenes/Icon ionic-ios-search.png" alt="">
             <img class="C" src="imagenes/Icon feather-shopping-cart.png">
             <h1>________________</h1>
         </div>
@@ -27,7 +27,7 @@
             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
             <p> compra </p>
         </div>
-        <div class="saldo">
+        <div id="saldo">
             <h2> Tarjeta Metrolinea de Yessica Perez </h2>
             <p> Saldo Actual = $3000 COP </p>
             <p> Saldo Escogido </p>
