--- a/DIA 3/index.html
+++ b/DIA 3/index.html
@@ -9,26 +9,29 @@
 <body>
     <div class="contenido">
         <div class="informacion">
+
             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
             <p class="uno"> Comprar Tarjeta</p>
             <a class="dos" href="index2.html"> Ver Saldo</a>
             <img id="informacionB" src="imagenes/Icon ionic-ios-search.png" alt="">
+            <img class="informacionc" src="imagenes/Icon feather-shopping-cart.png">
             <h1 id="linea">_____________</h1>
         </div>
-        <img class="tarjeta" src="imagenes/Metrolinea.png" alt="">
+      
+        <img id="tarjeta" src="imagenes/Metrolinea.png" alt="">
         <div class="tema">
-            <img class="uno" src="imagenes/Icon ionic-ios-arrow-up.png" alt="">
-            <img class="dos" src="imagenes/Icon ionic-ios-arrow-down.png" alt="">
+            <img id="tema .uno" src="imagenes/Icon ionic-ios-arrow-up.png" alt="">
+            <img id="tema .dos" src="imagenes/Icon ionic-ios-arrow-down.png" alt="">
             <img class="tres" src="imagenes/Menu.png" alt="">
             <p> Cantidad</p>
         </div>
         <div class="cuadrado">
              <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
-             <p> Comprar</p>
+             <h2> Comprar</h2>
         </div>
-        <div class="compra">
-             <h2> Tarjeta Metrolinea (saldo $3000 COP) </h2>
-             <p> $3000 COP </p>
+        <div id="compra">
+             <h2 id="comprah2"> Tarjeta Metrolinea (saldo $3000 COP) </h2>
+             <h1> $3000 COP </h1>
         </div>
     </div>
 </body>
