--- a/DIA 3/index2.html
+++ b/DIA 3/index2.html
@@ -13,8 +13,8 @@
             <a class="uno" href="index.html"> Comprar Tarjeta</a>
             <p class="dos"> Ver Saldo</p>
             <img id="informacionB" src="imagenes/Icon ionic-ios-search.png" alt="">
-            <img class="C" src="imagenes/Icon feather-shopping-cart.png">
-            <h1>________________</h1>
+            <img id="informacionC" src="imagenes/Icon feather-shopping-cart.png">
+            <h1 id="linea">_____________</h1>
         </div>
         <img class="tarjeta" src="imagenes/Metrolinea.png" alt="">
         <div class="tema">
@@ -25,12 +25,12 @@
         </div>
         <div class="cuadrado">
             <img src="imagenes/1200px-Metrolínea_logo.svg.png" alt="">
-            <p> compra </p>
+            <h2> comprar </h2>
         </div>
         <div id="saldo">
             <h2> Tarjeta Metrolinea de Yessica Perez </h2>
-            <p> Saldo Actual = $3000 COP </p>
-            <p> Saldo Escogido </p>
+            <h2> Saldo Actual = $3000 COP </h2>
+            <h2> Saldo Escogido </h2>
             <input type="text" class="Entrada" placeholder="$1500">
         </div>
     </div>
