--- a/DIA 4/index.html
+++ b/DIA 4/index.html
@@ -4,8 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="contenido">
+        <div id="path1">
+            <img src="imagenes/Path 1.png" alt="">
+            <img id="fondotwitch" src="imagenes/FondoTwitch.png" alt="">
+            <div>
+                <img id="iconeawesome" src="imagenes/Icon awesome-search.png" alt="">
+            </div>
+            <div>
+                <img id="group1" src="imagenes/Group 1.png" alt="">
+            </div>
+            <div>
+                <img id="login" src="imagenes/Login.png" alt="">
+            </div>
+            <div>
+                <img id="logoprime" src="imagenes/LogoPrimeE2.png" alt="">
+            </div>
+            <div>
+                <img id="yourfavorite" src="imagenes/Your favorite content, on one place only..png" alt="">
+            </div>
+            <div>
+                <img id="nowyou" src="imagenes/Now you can enjoy everything from Amazon Prime Video and Twitch Prime with you Amazon Prime subscription on one place that brings all the entertainmen.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle2" src="imagenes/Rectangle 2.png" alt="">
+            </div>
+            <div>
+                <img id="singup" src="imagenes/Sign-Up on Amazon.png" alt="">
+            </div>
+            <div>
+                <img id="group2" src="imagenes/Group 2.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle3" src="imagenes/Rectangle 3.png" alt="">
+            </div>
+            <div>
+                <img id="dontlike" src="imagenes/Don’t like to watch Live No problem , we got you covered.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle4" src="imagenes/Rectangle 4.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle41" src="imagenes/rectangle4.1.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle42" src="imagenes/Rectangle 4.2.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle43" src="imagenes/Rectangle 4.3.png" alt="">
+            </div>
+            <div>
+                <img id="rectangle44" src="imagenes/Rectangle 4.4.png" alt="">
+            </div>
+            <div>
+                <img id="youll" src="imagenes/You’ll find a variety of movies, not only for adults but also for your family, with our without internet. 24-7. On demand..png" alt="">
+            </div>
+            <div>
+                <img id="rectangle3" src="imagenes/Rectangle 3.png" alt="">
+            </div>
+            <div>
+                <img id="cancel" src="imagenes/Cancel any time , anywhere.png" alt="">
+            </div>
+            <div>
+                <img id="iconmetro" src="imagenes/Icon metro-cancel.png" alt="">
+            </div>
+            <div>
+                <img id="ifyou" src="imagenes/If you don’t like our services, you can cancel anytime you want , no contracts,no fees..png" alt="">
+            </div>
+            <div>
+                <img id="compatible" src="imagenes/Compatible devices.png" alt="">
+            </div>
+            <div>
+                <img id="theres" src="imagenes/There’s a range of devices where you can enjoy all of the content available inPrime Entertainment.png" alt="">
+            </div>
+            <div>
+                <img id="image2" src="imagenes/Image 2.png" alt="">
+            </div>
+            <div>
+                <img id="image1" src="imagenes/Image 1.png" alt="">
+            </div>
+            <div>
+                <img id="image3" src="imagenes/Image 3.png" alt="">
+            </div>
+            <div>
+                <img id="flecha" src="imagenes/Flecha.png" alt="">            
+            </div>
+            <div>
+                <img id="logocace" src="imagenes/Logo CACE Invertido UP.png" alt="">
+            </div>
+            <div>
+                <img id="group5" src="imagenes/Group 5.png" alt="">
+            </div>
+            <div>
+                <img id="powered" src="imagenes/Powered by.png" alt="">
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
