--- a/DIA 5/index.html
+++ b/DIA 5/index.html
@@ -7,7 +7,117 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div >
+
+        <div id="contenido">
+            <div id="fondo">
+                <p id="food"><b> Foods </b></p>
+                <p id="home"><b> Home </b></p>
+                <p id="about"><b> About </b></p>
+                <p id="menu"><b> Menu </b></p>
+                <p id="service"><b> Service </b></p>
+                <p id="contact"><b> Contact </b></p>
+                <p id="full"><b> Full Website </b></p>
+                <img id="imagen" src="imagenes/img/home.png">
+                <p id="foods"><b> Foods the </b></p>
+                <p id="most"><b> Most precious thing </b></p>
+                <p id="todays"><b> Today's Menu </b></p>
+            </div>
+        <div id="contenido">
+            <div id="fondo">
+                <img id="imagen2" src="imagenes/img/about.png">
+                <p id="aboutus"><b> About Us </b></p>
+                <p id="we"><b> We speak the good </b></p>
+                <p id="foodl"><b> food language </b></p>
+                <p id="it"><b> It is a long established fact that a</b></p>
+                <p id="be"><b> be distracted by the readable content </b></p>
+                <p id="looking"><b> looking at its layout. The point of </b></p>
+                <p id="learn"><b> Learn More </b></p>
+            </div>
+        </div>
+        <div id="contenido">
+            <div id="fondo">
+                <p id="foodmenu"><b> Food Menu </b></p>
+                <p id="fresh"><b> Fresh taste and grat price </b></p>
+                <p id="cuadro1"></p>
+                <p id="chiken"><b> Chicken Burger </b></p>
+                <p id="tasty"><b> Tasty Food </b></p>
+                <p id="precio"> $11.00 </p>
+                <img id="imagen3" src="imagenes/img/food1.png">
+               <p id="cuadro2"></p>
+               <img id="imagen4" src="imagenes/img/food2.png">
+               <p id="special"><b> Special Beef Burger </b></p>
+               <p id="tastyf"><b> Tasty Food </b></p>
+               <p id="precio2"><b> $11.00 </b></p>
+               <p id="cuadro3"></p>
+               <img id="imagen5" src="imagenes/img/food3.png">
+               <p id="fry"><b> Chicken Fry Pack  </b></p>
+               <p id="tasty3"><b> Tasty Food </b></p>
+               <p id="precio3"><b> $11.00 </b></p>
+            </div>
+        </div>
+        <div id="contenido">
+            <div id="fondo">
+                <p id="service2"><b> Service </b></p>
+                <p id="provide"><b> We provide best food services </b></p>
+                <img id="imagen6" src="imagenes/img/s1.png">
+                <p id="order"><b> Order </b></p>
+                <p id="itis"><b> It is a long established </b></p>
+                <p id="distracted"><b> be distracted by the readable </b></p>
+                <p id="lookingat"><b> looking at its layout. </b></p>
+                <img id="imagen7" src="imagenes/img/s2.png">
+                <p id="itis2"><b> It is a long established </b></p>
+                <p id="shipping"><b> Shipping </b></p>
+                <p id="distracted2"><b> be distracted by the readable </b></p>
+                <p id="looking2"><b> looking at its layout. </b></p>
+                <img id="imagen8" src="imagenes/img/s3.png">
+                <p id="dellvered"><b> Dellvered </b></p>
+                <p id="itis3"><b> It is a long established </b></p>
+                <p id="distracted3"><b> be distracted by the readable </b></p>
+            </div>
+            <div id="contenido">
+                <div id="fondo">
+                    <p id="cuadro4"></p>
+                    <p id="wemake"><b> We make quality food </b></p>
+                    <p id="everyday"><b> Everyday </b></p>
+                    <p id="cuadro5"> Learn More </p>
+                </div>
+            </div>
+            <div id="contenido">
+                <div id="fondo">
+                    <p id="menulinks"><b> Menu Links </b></p>
+                    <p id="home2"><b> Home </b></p>
+                    <p id="about2"><b> About </b></p>
+                    <h1 id="linea">____</h1>
+                    <p id="menu2"><b> Menu </b></p>
+                    <p id="service2"><b> Service </b></p>
+                    <p id="contact2"><b> Contact </b></p>
+                    <p id="our2"><b> Our Service </b></p>
+                    <h1 id="linea2">__</h1>
+                    <p id="web"><b> Web Desing </b></p>
+                    <p id="webd"><b> Web Development </b></p>
+                    <p id="marketing"><b> Marketing </b></p>
+                    <p id="product"><b> Product Management </b></p>
+                    <p id="graphic"><b> Graphic Desing </b></p>
+                    <p id="information"><b> Information </b></p>
+                    <h1 id="linea3">____</h1>
+                    <p id="about4"><b> About Us</b></p>
+                    <p id="delivery"><b> Delivery Information </b></p>
+                    <p id="privacy"><b> Privacy Policy </b></p>
+                    <p id="terms"><b> Terms & Conditions </b></p>
+                    <p id="contact3"><b> Contact Us</b></p>
+                    <h1 id="linea4">____</h1>
+                    <p id="circulo1"></p>
+                    <p id="circulo2"></p>
+                    <p id="circulo3"></p>
+                    <p id="circulo4"></p>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
 
 
     </div>
