--- a/DIA 6/index.html
+++ b/DIA 6/index.html
@@ -42,7 +42,12 @@
             <p id="procesos"> procesos, contratos y demás de manera </p>
             <p id="electronica"> electrónica, desde cualquier parte del </p>
             <p id="mundo"> mundo. </p>
-            <p id="tramitar2"> Tramitar </p>
+            <a id="tramitar2" href="index.html4">Tramitar</a>
+            <p id="inicio"> Inicio</p>
+            <p id="tramites3"> Tramites </p>
+            <img id="gobierno" src="imagenes/gobiernodecolombia.png">
+            <p id="contacto"> Contacto </p>
+            <a id="consultar2" href="index.html"> Consultar </a>
         </div>
 
     </div>
