--- a/DIA 6/index.html
+++ b/DIA 6/index.html
@@ -35,7 +35,7 @@
             <p id="comoun"> como un contribuyente. Tu identificación del RUT se llama </p>
             <p id="nit"> NIT (Número de Identificación Tributaria), el cual obtendras al final </p>
             <p id="delproceso"> del proceso. </p>
-            <p id="tramitar1"> Tramitar </p>
+            <a id="tramitar1" href="index5.html"> Tramitar </a>
             <img id="iconsignat" src="imagenes/Icon awesome-signature.png">
             <p id="lafirma"> La firma electrónica te permite autorizar </p>
             <p id="tramitarfirma"><b> Tramitar Firma Electrónica</b> </p>
@@ -43,11 +43,22 @@
             <p id="electronica"> electrónica, desde cualquier parte del </p>
             <p id="mundo"> mundo. </p>
             <a id="tramitar2" href="index.html4">Tramitar</a>
-            <p id="inicio"> Inicio</p>
+            <a id="inicio" href="index.html"> Inicio</a>
             <p id="tramites3"> Tramites </p>
             <img id="gobierno" src="imagenes/gobiernodecolombia.png">
             <p id="contacto"> Contacto </p>
             <a id="consultar2" href="index.html"> Consultar </a>
+            <img id="iconmaterial" src="imagenes/Icon material-location-on.png">
+            <img id="logofooter" src="imagenes/logo_footer.png">
+            <p id="prosperidad"> Prosperidad Social </p>
+            <p id="carrera"> Carrera 8 #6C-38 San Agustín/Bogotá D.C Colombia </p>
+            <p id="codigopostal"> Código postal:111711 </p>
+            <p id="horario"> Horario de Atención: 8:00 a.m - 7:00 p.m </p>
+            <img id="iconphone" src="imagenes/Icon awesome-phone.png">
+            <p id="contact"> Contact Center:(571)3556922 </p>
+            <p id="lineaatencion"> Linea de atención Adecuada:(571)7428973</p>
+            <p id="pbx"> PBX:(571) 7428973</p>
+            <p id="numeros"> (571) 3103158107 </p>
         </div>
 
     </div>
