--- a/DIA 6/index.html
+++ b/DIA 6/index.html
@@ -21,9 +21,10 @@
             <p id="porfavor"> por favor ingresa los datos de tu cédula para ingresar al</p>
             <img id="ajaxloadingbar" src="imagenes/ajaxloadingbar.gif.xhtml;jsessionid=+sHFYknGCBRjqaTejHaNvZYe.muisca_face_nodo6.png">
             <p id="numerodocu"> Número de Documento </p>
-            <p id="cuadro1"></p>
+            <input type="text" id="cuadro1">
             <p id="fecha"> Fecha de expedición del documento </p>
             <p id="cuadro2"></p>
+            <img id="calendar" src="imagenes/Icon awesome-calendar-alt.png">
             <img id="nosoyrobot" src="imagenes/Image 1.png">
             <p id="estapagina"> Esta pagina te va a dirigir a la plataforma MUISCA, por lo cual la existencia de la cuenta será evidenciada en esta misma</p>
             <p id="cuadroconsultar"> </p>
