--- a/DIA 7/index.html
+++ b/DIA 7/index.html
@@ -76,6 +76,7 @@
                 <p id="dellvered"><b> Dellvered </b></p>
                 <p id="itis3"><b> It is a long established </b></p>
                 <p id="distracted3"><b> be distracted by the readable </b></p>
+                <p id="looking3"> looking at its layout. </p>
             </div>
         </div>
             <div id="contenido5">
@@ -93,7 +94,7 @@
                     <p id="about2"><b> About </b></p>
                     <h1 id="linea">____</h1>
                     <p id="menu2"><b> Menu </b></p>
-                    <p id="service2"><b> Service </b></p>
+                    <p id="service3"><b> Service </b></p>
                     <p id="contact2"><b> Contact </b></p>
                     <p id="our2"><b> Our Service </b></p>
                     <h1 id="linea2">__</h1>
