--- a/DIA 8/index.html
+++ b/DIA 8/index.html
@@ -11,14 +11,26 @@
         <div id="video1">
             <iframe src="https://player.vimeo.com/video/854191048?h=935ef5e364&title=0&muted=1&loop=1&background=1&quality=hd&app_id=122963" frameborder="0"></iframe>
         </div>
-        <div>
-            <iframe src="https://player.vimeo.com/video/853988650?h=6eeb8ce9c5&title=0&muted=1&loop=1&background=1&quality=hd&app_id=122963" frameborder="0"></iframe>
+        <div id="video2">
+            <iframe src="https://player.vimeo.com/video/853988616?h=437ec40c29&title=0&muted=1&loop=1&background=1&quality=hd&app_id=122963" frameborder="0"></iframe>
         </div>
-        <div>
-            <iframe src="https://player.vimeo.com/video/853988588?h=c7b4a18ac3&title=0&muted=1&loop=1&background=1&quality=1080p&app_id=122963" frameborder="0"></iframe>
+        <div id="imagen1">
+            <img id="imagen1" src="imagenes/Koto-x-De-extinction-Long-Form-1-1300x1733.jpg">
         </div>
-        <div>
-            
+        <div id="video3">
+            <iframe src="https://player.vimeo.com/video/853988588?h=c7b4a18ac3&title=0&muted=1&loop=1&background=1&quality=1080p&app_id=122963" frameborder="0" width="470px" height="300px"></iframe>
+        </div>
+    </div>
+    <br>
+    <div id="grid-container2">
+        <div id="imagen2">
+            <img id="imagen2" src="imagenes/Koto2-x-De-extinction-Long-Form-1-1300x1733.jpg">
+        </div>
+        <div id="imagen3">
+            <img id="imagen3" src="imagenes/Koto3-x-De-extinction-Competitors-1-1300x1833-copy.jpeg">
+        </div>
+        <div id="video4">
+            <iframe src="https://player.vimeo.com/video/853988650?h=6eeb8ce9c5&title=0&muted=1&loop=1&background=1&quality=hd&app_id=122963" frameborder="0" width="230px" height="180px"></iframe>
         </div>
     </div>
 </body>
