--- a/DIA 9/index.html
+++ b/DIA 9/index.html
@@ -18,11 +18,17 @@
         <div id="nube">
             <img id="nube" src="imagenes/gratis-png-nubes-blancas-caricatura-dibujo-de-nubes-nubes-de-dibujos-animados-thumbnail-removebg-preview.png">
         </div>
-        <div id="flor">
-            <img id="flor" src="imagenes/m2i8b1H7Z5H7K9Z5-removebg-preview.png">
-        </div>
         <div id="lluvia">
             <img id="lluvia" src="imagenes/192-1924335_gota-lluvia-gotas-de-lluvia-png-transparent-png-removebg-preview.png">
+        </div>
+        <div class="contador">
+            <div class="numero">3</div>
+            <div class="numero">2</div>
+            <div class="numero">1</div>
+            <div class="numero">¡Acción!</div>
+        </div>
+        <div id="flor">
+            <img id="flor" src="imagenes/m2i8b1H7Z5H7K9Z5-removebg-preview.png">
         </div>
     </div>
     
