--- a/DIA 10/index.html
+++ b/DIA 10/index.html
@@ -8,8 +8,28 @@
 </head>
 <body>
     <div id="contenedor">
-        <div id="caja1"></div>
-        <div id="caja2"></div>
+        <div id="caja1">
+            <img id="cara" src="imagenes/2697082-removebg-preview.png">
+            <p id="admin">AdminSite</p>
+            <p id="cuadro1"> Dashboard</p>
+            <p id="main"> MAIN</p>
+            <p id="element"> Elements</p>
+            <p id="figura1"> > </p>
+            <p id="charts"> Charts</p>
+            <p id="widgets"> Widgets</p>
+            <p id="table"> TABLE AND FORMS</p>
+            <p id="tables"> Tables</p>
+            <p id="forms"> Forms</p>
+        </div>
+        <div id="caja2">
+            <img id="imagen" src="imagenes/c68995aa24906a1320b4d7d10aa374b2.jpg">
+        </div>
+        <div id="caja3">
+            <p id="dash"> Dashboard</p>
+            <p id="home"> Home</p>
+            <p id="linea"> /</p>
+            <p id="dash1"> Dashboard</p>
+        </div>
 
     </div>
 </body>
