--- a/DIA 10/index.html
+++ b/DIA 10/index.html
@@ -8,27 +8,64 @@
 </head>
 <body>
     <div id="contenedor">
+        <input type="checkbox" id="cajita">
         <div id="caja1">
             <img id="cara" src="imagenes/2697082-removebg-preview.png">
             <p id="admin">AdminSite</p>
             <p id="cuadro1"> Dashboard</p>
             <p id="main"> MAIN</p>
             <p id="element"> Elements</p>
-            <p id="figura1"> > </p>
+            <img id="figura1" src="imagenes/icons8-expression-67.png"> 
+            <img id="figura2" src="imagenes/icons8-imagen-48.png">
             <p id="charts"> Charts</p>
+            <img id="figura3" src="imagenes/chart-solid-24.png">
             <p id="widgets"> Widgets</p>
+            <img id="figura4" src="imagenes/widget-solid-24.png">
             <p id="table"> TABLE AND FORMS</p>
             <p id="tables"> Tables</p>
+            <img id="figura5" src="imagenes/table-regular-24.png">
             <p id="forms"> Forms</p>
+            <img id="figura6" src="imagenes/icons8-calendario-48.png">
+            <imd id="figura7" src="imagenes/icons8-expression-672.png"></imd>
         </div>
+        <input type="checkbox" id="cajita">
         <div id="caja2">
             <img id="imagen" src="imagenes/c68995aa24906a1320b4d7d10aa374b2.jpg">
+            <label for="cajita" id="imagen1"><img src="imagenes/menu-regular-24.png" alt=""></label>
         </div>
+        <input type="checkbox" id="cajita">
         <div id="caja3">
             <p id="dash"> Dashboard</p>
             <p id="home"> Home</p>
             <p id="linea"> /</p>
             <p id="dash1"> Dashboard</p>
+        </div>
+        <div id="contenedor1">
+            <div id="bloques">
+                <div id="bloque1"></div>
+                <div id="bloque2"></div>
+                <div id="bloque3"></div>
+                <div id="bloque4"></div>
+                <p id="mil"> 1500</p>
+                <p id="tra"> Traffic</p>
+                <img id="chulito1" src="imagenes/up.webp">
+                <p id="porcentaje1"> 40%</p>
+                <p id="dos"> 234</p>
+                <p id="sales"> Sales</p>
+                <p id="porcentaje2"> 60%</p>
+                <p id="cuatro"> 465</p>
+                <img id="chulito4" src="imagenes/down.webp">
+                <p id="page"> Pageviews</p>
+                <p id="porcentaje3"> 30%</p>
+                <img id="chulito2" src="imagenes/up.webp">
+                <p id="dos1"> 235</p>
+                <p id="visitors"> Visitors</p>
+                <img id="chulito3" src="imagenes/up.webp">
+                <p id="porcentaje4"> 80%</p>
+            </div>
+            <div id="bloque5"></div>
+            <p id="salesr"> Sales Report</p>
+            <p id="hola"> Hola Mundo</p>
         </div>
 
     </div>
