--- a/refuerzo/index.html
+++ b/refuerzo/index.html
@@ -12,9 +12,9 @@
             <p id="iconoazul"></p>
             <img id="imagen1" src="imagenes/Fondo.png">
             <a id="inicio" href="index.html"> Inicio</a>
-            <a id="quees" href="index2.html"> ¿Qué es?</a>
+            <a id="quees" href="#caja2"> ¿Qué es?</a>
             <img id="imagen2" src="imagenes/gobiernodecolombia.png">
-            <a id="entrega" href="index3.html"> Entrega</a>
+            <a id="entrega" href="#caja3"> Entrega</a>
             <a id="consultar" href="index.html"> Consultar</a>
             <p id="cuadro"></p>
             <strong id="consultae"> Consulta tu estado del </strong>
@@ -23,9 +23,13 @@
             <p id="porfavor"> Por favor ingresa tus datos personales para revisar el estado de entrega</p>
             <p id="de"> de tu ingreso</p>
             <strong id="tipo"> Tipo de Documento</strong>
-            <input type="text" id="cuadro1">
+            <select id="cuadro1">
+                <option value="Cedula de Cidadania">Cedula de Ciudadania</option>
+                <option> Tarjeta de identidad</option>
+                <option> Registro Civil</option>
+            </select>
             <strong id="numero"> Número de Documento</strong>
-            <input type="number" id="cuadro2">
+            <input type="text" id="cuadro2">
             <strong id="nombre"> Primer Nombre</strong>
             <input type="text" id="cuadro3">
             <strong id="apellido"> Primer Apellido</strong>
@@ -43,10 +47,45 @@
             <a id="consultar3" href="index.html"> Consultar</a>
         </div>
     </div>
-    <div id="contenedor">
         <div id="caja2">
+            <a id="quees" href="#caja2"></a>
             <img id="imagen3" src="imagenes/Diseño sin título.png">
+            <p id="queun"> ¿Qué es el Ingreso Solidario?</p>
+            <p id="esquema">Es un esquema mediante el cual se estrega una </p>
+            <p id="transferencia"> transferencia monetaria en favor de los hogares </p>
+            <p id="situacion"> situación de pobreza y vulnerabilidad que </p>
+            <p id="sean"> no sean beneficiarios de programas sociales del Estado.</p>
+            <p id="hogares"> Los hogares en condición de pobreza </p>
+            <p id="vulne"> y vulnerabilidad, afectados en sus</p>
+            <p id="como"> ingresos como consecuancia de la pandemia del coronavirus</p>
+            <p id="hagan"> , que no hagan parte de los programas sociales</p>
+            <p id="fami"> "Familias en Acción" , "Colombia Mayor", "</p>
+            <p id="jove"> Jovenes en Acción" y "Devolución del IVA"</p>
+            <p id="podran"> podrán acceder a esta medida social.</p>
+            <p id="conocer"> conocer las etapas de entrega</p>
+            <a id="imagen4" href="#caja3"><img src="imagenes/Icon ionic-ios-arrow-down.png"></a>  
         </div>
-    </div>
+        <div id="caja3">
+            <p id="etapas"> Etapas de Entrega </p>
+            <p id="eta"> Etapa 1</p>
+            <strong id="desde"> Desde el 1 de Abril</strong>
+            <img id="imagen5" src="imagenes/b82ea-logo-vector-bancamia.png">
+            <p id="eta2"> Etapa 2</p>
+            <strong id="desde2"> 9 de Abril al 18 de Abril</strong>
+            <p id="bancos"> Bancos Autorizados</p>
+            <img id="imagen6" src="imagenes/logo-bancolombia.png">
+            <img id="imagen7" src="imagenes/Logo Flat.png">
+            <img id="imagen8" src="imagenes/794033df1e509b3adb4dfe495af54c3e.png">
+            <p id="eta3"> Etapa 3</p>
+            <strong id="abril"> 18 de Abril al 25 de Abril</strong>
+            <img id="imagen9" src="imagenes/1200px-Banco_Caja_Social_logo.svg.png">
+            <p id="preguntas"> Preguntas Frecuentes</p>
+            <a id="imagen10" href="#caja4"> <img src="imagenes/imagen10.png"></a>
+        </div>
+        <div id="caja4">
+            <p id="frecuentes"> Preguntas Frecuentes </p>
+            <p id="iconoazul2"></p>
+            <p id="uno"> 1</p>
+        </div>
 </body>
 </html>
