--- a/refuerzo/index.html
+++ b/refuerzo/index.html
@@ -7,143 +7,141 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="contenedor">
-        <div id="caja1">
-            <p id="iconoazul"></p>
-            <img id="imagen1" src="imagenes/Fondo.png">
-            <a id="inicio" href="index.html"> Inicio</a>
-            <a id="quees" href="#caja2"> ¿Qué es?</a>
-            <img id="imagen2" src="imagenes/gobiernodecolombia.png">
-            <a id="entrega" href="#caja3"> Entrega</a>
-            <a id="consultar" href="index.html"> Consultar</a>
-            <p id="cuadro"></p>
-            <strong id="consultae"> Consulta tu estado del </strong>
-            <strong id="ingreso"> Ingreso</strong>
-            <strong id="solidario"> Solidario</strong>
-            <p id="porfavor"> Por favor ingresa tus datos personales para revisar el estado de entrega</p>
-            <p id="de"> de tu ingreso</p>
-            <strong id="tipo"> Tipo de Documento</strong>
-            <select id="cuadro1">
-                <option value="Cedula de Cidadania">Cedula de Ciudadania</option>
-                <option> Tarjeta de identidad</option>
-                <option> Registro Civil</option>
-            </select>
-            <strong id="numero"> Número de Documento</strong>
-            <input type="text" id="cuadro2">
-            <strong id="nombre"> Primer Nombre</strong>
-            <input type="text" id="cuadro3">
-            <strong id="apellido"> Primer Apellido</strong>
-            <input type="text" id="cuadro4">
-            <strong id="fecha"> Fecha de Expedición del Documento </strong>
-            <input type="date" id="cuadro5">
-            <strong id="telefono"> Télefono Móvil</strong>
-            <input type="tel" id="cuadro6">
-            <p id="consultar2"> Consultar</p>
-            <p id="ingresos"> Ingreso Solidario </p>
-            <p id="debido"> Debido a la situación generada por el COVID-19,</p>
-            <p id="el"> el gobierno nacional aportará a las familias más afectadas</p>
-            <p id="que"> y que no pertenezca a ningún programa social,</p>
-            <p id="un"> un subsidio por $160.000</p>
-            <a id="consultar3" href="index.html"> Consultar</a>
-        </div>
+    <div id="caja1">
+        <p id="iconoazul"></p>
+        <img id="imagen1" src="imagenes/Fondo.png">
+        <a id="inicio" href="index.html"> Inicio</a>
+        <a id="quees" href="#caja2"> ¿Qué es?</a>
+        <img id="imagen2" src="imagenes/gobiernodecolombia.png">
+        <a id="entrega" href="#caja3"> Entrega</a>
+        <a id="consultar" href="index.html"> Consultar</a>
+        <p id="cuadro"></p>
+        <strong id="consultae"> Consulta tu estado del </strong>
+        <strong id="ingreso"> Ingreso</strong>
+        <strong id="solidario"> Solidario</strong>
+        <p id="porfavor"> Por favor ingresa tus datos personales para revisar el estado de entrega</p>
+        <p id="de"> de tu ingreso</p>
+        <strong id="tipo"> Tipo de Documento</strong>
+        <select id="cuadro1">
+            <option value="Cedula de Cidadania">Cedula de Ciudadania</option>
+            <option> Tarjeta de identidad</option>
+            <option> Registro Civil</option>
+        </select>
+        <strong id="numero"> Número de Documento</strong>
+        <input type="text" id="cuadro2">
+        <strong id="nombre"> Primer Nombre</strong>
+        <input type="text" id="cuadro3">
+        <strong id="apellido"> Primer Apellido</strong>
+        <input type="text" id="cuadro4">
+        <strong id="fecha"> Fecha de Expedición del Documento </strong>
+        <input type="date" id="cuadro5">
+        <strong id="telefono"> Télefono Móvil</strong>
+        <input type="tel" id="cuadro6">
+        <p id="consultar2"> Consultar</p>
+        <p id="ingresos"> Ingreso Solidario </p>
+        <p id="debido"> Debido a la situación generada por el COVID-19,</p>
+        <p id="el"> el gobierno nacional aportará a las familias más afectadas</p>
+        <p id="que"> y que no pertenezca a ningún programa social,</p>
+        <p id="un"> un subsidio por $160.000</p>
+        <a id="consultar3" href="index.html"> Consultar</a>
     </div>
-        <div id="caja2">
-            <a id="quees" href="#caja2"></a>
-            <img id="imagen3" src="imagenes/Diseño sin título.png">
-            <p id="queun"> ¿Qué es el Ingreso Solidario?</p>
-            <p id="esquema">Es un esquema mediante el cual se estrega una </p>
-            <p id="transferencia"> transferencia monetaria en favor de los hogares </p>
-            <p id="situacion"> situación de pobreza y vulnerabilidad que </p>
-            <p id="sean"> no sean beneficiarios de programas sociales del Estado.</p>
-            <p id="hogares"> Los hogares en condición de pobreza </p>
-            <p id="vulne"> y vulnerabilidad, afectados en sus</p>
-            <p id="como"> ingresos como consecuancia de la pandemia del coronavirus</p>
-            <p id="hagan"> , que no hagan parte de los programas sociales</p>
-            <p id="fami"> "Familias en Acción" , "Colombia Mayor", "</p>
-            <p id="jove"> Jovenes en Acción" y "Devolución del IVA"</p>
-            <p id="podran"> podrán acceder a esta medida social.</p>
-            <p id="conocer"> conocer las etapas de entrega</p>
-            <a id="imagen4" href="#caja3"><img src="imagenes/Icon ionic-ios-arrow-down.png"></a>  
-        </div>
-        <div id="caja3">
-            <p id="etapas"> Etapas de Entrega </p>
-            <p id="eta"> Etapa 1</p>
-            <strong id="desde"> Desde el 1 de Abril</strong>
-            <img id="imagen5" src="imagenes/b82ea-logo-vector-bancamia.png">
-            <p id="eta2"> Etapa 2</p>
-            <strong id="desde2"> 9 de Abril al 18 de Abril</strong>
-            <p id="bancos"> Bancos Autorizados</p>
-            <img id="imagen6" src="imagenes/logo-bancolombia.png">
-            <img id="imagen7" src="imagenes/Logo Flat.png">
-            <img id="imagen8" src="imagenes/794033df1e509b3adb4dfe495af54c3e.png">
-            <p id="eta3"> Etapa 3</p>
-            <strong id="abril"> 18 de Abril al 25 de Abril</strong>
-            <img id="imagen9" src="imagenes/1200px-Banco_Caja_Social_logo.svg.png">
-            <p id="preguntas"> Preguntas Frecuentes</p>
-            <a id="imagen10" href="#caja4"> <img src="imagenes/imagen10.png"></a>
-        </div>
-        <div id="caja4">
-            <p id="frecuentes"> Preguntas Frecuentes </p>
-            <p id="iconoazul2"></p>
-            <p id="uno"> 1</p>
-            <strong id="yo"> Yo había salido como beneficiaria en la primera fase y ahora no aparezco</strong>
-            <strong id="enla"> en el listado de beneficiarios ¿Es decir, ya no recibiré el beneficio?</strong>
-            <p id="estamos"> Estamos actualizando el listado de beneficiarios que recibieron el giro.</p>
-            <p id="si"> Si encontró su nombre en la primera etapa y está plenamente</p>
-            <p id="identi"> identificado, no ha perdido su beneficio. </p>
-            <p id="iconoazul3"></p>
-            <p id="dos"> 2</p>
-            <strong id="porque"> ¿Por qué no aparezco ahora en el listado de ingresosolidario.prosperidadsocial.gov.co?</strong>
-            <p id="actu"> Estamos actualizando el listado de  beneficiarios que recibieron el giro.</p>
-            <p id="encontro"> Si encontró su nombre en la primera etapa y está plenamente </p>
-            <p id="iden"> identificado, no ha perdido su beneficio.</p>
-            <p id="ver"> Ver más</p>
-            <a id="imagen11" href="#caja5"> <img src="imagenes/imagen11.png"></a>
-        </div>
-        <div id="caja5">
-            <p id="iconoazul4"></p>
-            <p id="tres"> 3</p>
-            <strong id="debo"> ¿Qué debo hacer porque me llegó el mensaje de que soy beneficiario y no he recibido el pago?</strong>
-            <p id="usted"> Si usted fue informado de que es beneficiario del programa mediante un mensaje de texto</p>
-            <p id="enviado"> enviado por la entidad financiera en la cual tiene una cuenta o depósito activo </p>
-            <p id="comu"> comuniquese con esa entidad financiera para averiguar cómo acceder a los recursos del ingreso Solidario.</p>
-            <p id="not"> Si usted no tiene una cuenta o depósito con el sistema financiero, y es elegido</p>
-            <p id="dentro"> dentro del programa ingreso Solidario, pronto recibirá un mensaje con</p>
-            <p id="las"> las instruccion es para hacer la apertura de una cuenta digital. </p>
-            <p id="iconoazul5"></p>
-            <p id="cuatro"> 4</p>
-            <strong id="pagina"> Consulté en la página web y soy beneficiario, pero aún</strong>
-            <strong id="me"> no me han llamado ni he recibido mensaje de texto ¿Qué debo hacer?</strong>
-            <p id="nombre1"> Si used encontró su nombre y cédula en la base de beneficiarios y no ha recibido un mensaje de texto, significa que hace parte </p>
-            <p id="ciclo"> de un ciclo posterior de pagos.Durante esta etapa, las entidades financieras se contactarán con usted </p>
-            <p id="darles"> para darles las indicaciones de cómo recibir el giro o hacer la apertura de un depósito simplificado a través de su celular</p>
-            <p id="ver2"> Ver más</p>
-            <a id="imagen12" href="#caja6"> <img src="imagenes/imagen12.png"></a>
-        </div>
-        <div id="caja6">
-            <p id="iconoazul6"></p>
-            <p id="cinco"> 5</p>
-            <strong id="losque"> ¿Qué debemos hacer los que somos beneficiarios, pero no tenemos celular o cambiamos de número?</strong>
-            <p id="pros"> Prosperidad Social está trabajando con diferentes organizaciones y</p>
-            <p id="fuentes"> fuentes de datos para ubicarlo y contactarlo.</p>
-            <p id="invi"> Lo invitamos a consultar periódicamente la página.</p>
-            <p id="iconoazul7"></p>
-            <strong id="tiene"> ¿Tiene más preguntas?</strong>
-            <p id="dudes1"> Por favor no dudes en contactarnos para poderte dar la información que necesites</p>
-            <p id="iconoblanco"></p>
-            <p id="conta"> Contáctanos </p>
-            <p id="iconoazul8"></p>
-            <img id="imagen13" src="imagenes/Icon material-location-on.png">
-            <p id="social"> Prosperidad Social </p>
-            <p id="ca"> Carrera 7 No 27 - 18 / Bogotá D.C, Colombia </p>
-            <p id="co"> Código Postal:110311</p>
-            <p id="hora"> Horario de Atención:8:00 a.m - 2:00 p.m.</p>
-            <img id="imagen14" src="imagenes/imagen14.jpeg">
-            <img id="imagen15" src="imagenes/imagen15.png">
-            <p id="linea"> Linea Gratuita Nacional:01-8000-951100</p>
-            <p id="linea2"> Linea de atención Paga:(1)5188811</p>
-            <p id="conmu"> Conmutador:(57+)5142060</p>
-            <p id="ingre"> ingreso.solidario@prosperidadsocial.gov.co</p>
-        </div>
+</div>
+    <div id="caja2">
+        <a id="quees" href="#caja2"></a>
+        <img id="imagen3" src="imagenes/Diseño sin título.png">
+        <p id="queun"> ¿Qué es el Ingreso Solidario?</p>
+        <p id="esquema">Es un esquema mediante el cual se estrega una </p>
+        <p id="transferencia"> transferencia monetaria en favor de los hogares </p>
+        <p id="situacion"> situación de pobreza y vulnerabilidad que </p>
+        <p id="sean"> no sean beneficiarios de programas sociales del Estado.</p>
+        <p id="hogares"> Los hogares en condición de pobreza </p>
+        <p id="vulne"> y vulnerabilidad, afectados en sus</p>
+        <p id="como"> ingresos como consecuancia de la pandemia del coronavirus</p>
+        <p id="hagan"> , que no hagan parte de los programas sociales</p>
+        <p id="fami"> "Familias en Acción" , "Colombia Mayor", "</p>
+        <p id="jove"> Jovenes en Acción" y "Devolución del IVA"</p>
+        <p id="podran"> podrán acceder a esta medida social.</p>
+        <p id="conocer"> conocer las etapas de entrega</p>
+        <a id="imagen4" href="#caja3"><img src="imagenes/Icon ionic-ios-arrow-down.png"></a>  
+    </div>
+    <div id="caja3">
+        <p id="etapas"> Etapas de Entrega </p>
+        <p id="eta"> Etapa 1</p>
+        <strong id="desde"> Desde el 1 de Abril</strong>
+        <img id="imagen5" src="imagenes/b82ea-logo-vector-bancamia.png">
+        <p id="eta2"> Etapa 2</p>
+        <strong id="desde2"> 9 de Abril al 18 de Abril</strong>
+        <p id="bancos"> Bancos Autorizados</p>
+        <img id="imagen6" src="imagenes/logo-bancolombia.png">
+        <img id="imagen7" src="imagenes/Logo Flat.png">
+        <img id="imagen8" src="imagenes/794033df1e509b3adb4dfe495af54c3e.png">
+        <p id="eta3"> Etapa 3</p>
+        <strong id="abril"> 18 de Abril al 25 de Abril</strong>
+        <img id="imagen9" src="imagenes/1200px-Banco_Caja_Social_logo.svg.png">
+        <p id="preguntas"> Preguntas Frecuentes</p>
+        <a id="imagen10" href="#caja4"> <img src="imagenes/imagen10.png"></a>
+    </div>
+    <div id="caja4">
+        <p id="frecuentes"> Preguntas Frecuentes </p>
+        <p id="iconoazul2"></p>
+        <p id="uno"> 1</p>
+        <strong id="yo"> Yo había salido como beneficiaria en la primera fase y ahora no aparezco</strong>
+        <strong id="enla"> en el listado de beneficiarios ¿Es decir, ya no recibiré el beneficio?</strong>
+        <p id="estamos"> Estamos actualizando el listado de beneficiarios que recibieron el giro.</p>
+        <p id="si"> Si encontró su nombre en la primera etapa y está plenamente</p>
+        <p id="identi"> identificado, no ha perdido su beneficio. </p>
+        <p id="iconoazul3"></p>
+        <p id="dos"> 2</p>
+        <strong id="porque"> ¿Por qué no aparezco ahora en el listado de ingresosolidario.prosperidadsocial.gov.co?</strong>
+        <p id="actu"> Estamos actualizando el listado de  beneficiarios que recibieron el giro.</p>
+        <p id="encontro"> Si encontró su nombre en la primera etapa y está plenamente </p>
+        <p id="iden"> identificado, no ha perdido su beneficio.</p>
+        <p id="ver"> Ver más</p>
+        <a id="imagen11" href="#caja5"> <img src="imagenes/imagen11.png"></a>
+    </div>
+    <div id="caja5">
+        <p id="iconoazul4"></p>
+        <p id="tres"> 3</p>
+        <strong id="debo"> ¿Qué debo hacer porque me llegó el mensaje de que soy beneficiario y no he recibido el pago?</strong>
+        <p id="usted"> Si usted fue informado de que es beneficiario del programa mediante un mensaje de texto</p>
+        <p id="enviado"> enviado por la entidad financiera en la cual tiene una cuenta o depósito activo </p>
+        <p id="comu"> comuniquese con esa entidad financiera para averiguar cómo acceder a los recursos del ingreso Solidario.</p>
+        <p id="not"> Si usted no tiene una cuenta o depósito con el sistema financiero, y es elegido</p>
+        <p id="dentro"> dentro del programa ingreso Solidario, pronto recibirá un mensaje con</p>
+        <p id="las"> las instruccion es para hacer la apertura de una cuenta digital. </p>
+        <p id="iconoazul5"></p>
+        <p id="cuatro"> 4</p>
+        <strong id="pagina"> Consulté en la página web y soy beneficiario, pero aún</strong>
+        <strong id="me"> no me han llamado ni he recibido mensaje de texto ¿Qué debo hacer?</strong>
+        <p id="nombre1"> Si used encontró su nombre y cédula en la base de beneficiarios y no ha recibido un mensaje de texto, significa que hace parte </p>
+        <p id="ciclo"> de un ciclo posterior de pagos.Durante esta etapa, las entidades financieras se contactarán con usted </p>
+        <p id="darles"> para darles las indicaciones de cómo recibir el giro o hacer la apertura de un depósito simplificado a través de su celular</p>
+        <p id="ver2"> Ver más</p>
+        <a id="imagen12" href="#caja6"> <img src="imagenes/imagen12.png"></a>
+    </div>
+    <div id="caja6">
+        <p id="iconoazul6"></p>
+        <p id="cinco"> 5</p>
+        <strong id="losque"> ¿Qué debemos hacer los que somos beneficiarios, pero no tenemos celular o cambiamos de número?</strong>
+        <p id="pros"> Prosperidad Social está trabajando con diferentes organizaciones y</p>
+        <p id="fuentes"> fuentes de datos para ubicarlo y contactarlo.</p>
+        <p id="invi"> Lo invitamos a consultar periódicamente la página.</p>
+        <p id="iconoazul7"></p>
+        <strong id="tiene"> ¿Tiene más preguntas?</strong>
+        <p id="dudes1"> Por favor no dudes en contactarnos para poderte dar la información que necesites</p>
+        <p id="iconoblanco"> Contáctanos</p>
+        <p id="iconoazul8"></p>
+        <img id="imagen13" src="imagenes/Icon material-location-on.png">
+        <p id="social"> Prosperidad Social </p>
+        <p id="ca"> Carrera 7 No 27 - 18 / Bogotá D.C, Colombia </p>
+        <p id="co"> Código Postal:110311</p>
+        <p id="hora"> Horario de Atención:8:00 a.m - 2:00 p.m.</p>
+        <img id="imagen14" src="imagenes/imagen14.jpeg">
+        <img id="imagen15" src="imagenes/imagen15.png">
+        <p id="linea"> Linea Gratuita Nacional:01-8000-951100</p>
+        <p id="linea2"> Linea de atención Paga:(1)5188811</p>
+        <p id="conmu"> Conmutador:(57+)5142060</p>
+        <p id="ingre"> ingreso.solidario@prosperidadsocial.gov.co</p>
+    </div>
 </body>
 </html>
