--- a/REPASO DIA 3/index3.html
+++ b/REPASO DIA 3/index3.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    <div id="imagen"> <img id="imagen1" src="ima/imagen1.jpg"></div>
-    <div id="imagen2"> <img id="imagen2" src="ima/imagen2.jpg"></div>
-    <div id="imagen3"> <img id="imagen3" src="ima/imagen3.jpg"></div>
-    <div id="imagen4"> <img id="imagen4" src="ima/imagen4.jpg"></div>
-    <div id="imagen5"> <img id="imagen5" src="ima/imagen5.jpg"></div>
-    <div id="imagen6"> <img id="imagen6" src="ima/imagen6.jpg"></div>
-    <div id="imagen7"> <img id="imagen7" src="ima/imagen7.jpg"></div>
-    <div id="imagen8"> <img id="imagen8" src="ima/imagen8.jpg"></div>
-    <div id="imagen9"> <img id="imagen9" src="ima/imagen9.jpg"></div>
-    <div id="imagen10"> <img id="imagen10" src="ima/imagen10.jpg"></div>
+    <div id="principal">
+        <div id="imagen1"> <img id="imagen1" src="ima/imagen1.jpg"></div>
+        <div id="imagen2"> <img id="imagen2" src="ima/imagen2.jpg"></div>
+        <div id="imagen3"> <img id="imagen3" src="ima/imagen3.jpg"></div>
+        <div id="imagen4"> <img id="imagen4" src="ima/imagen4.jpg"></div>
+        <div id="imagen5"> <img id="imagen5" src="ima/imagen5.jpg"></div>
+        <div id="imagen6"> <img id="imagen6" src="ima/imagen6.jpg"></div>
+        <div id="imagen7"> <img id="imagen7" src="ima/imagen7.jpg"></div>
+        <div id="imagen8"> <img id="imagen8" src="ima/imagen8.jpg"></div>
+        <div id="imagen9"> <img id="imagen9" src="ima/imagen9.jpg"></div>
+        <div id="imagen10"> <img id="imagen10" src="ima/imagen10.jpg"></div>
+    </div>
 </body>
 </html>
