--- a/REPASO DIA 3/index4.html
+++ b/REPASO DIA 3/index4.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-    <div id="iconoblanco"></div>
-    <div id="iconoblanco2"> <img</div>
-    <div id="imagen1"> <img id="imagen1" src="imag/pink_robot.svg"></div>
-    <div id="letra1"> <p>Your Reservation is complete!</p></div>
-    <div id="letra2"> <p> Come meet the robots on Saturday at 2pm</p></div>
-    <div id="letra3"> <p> We can't wat to see you there!</p></div>
-    <div id="cuadro"> Make another reservation</div>
+    <div id="iconoblanco2"> <img id="imagen1" src="imag/pink_robot.svg"></div>
+    <div id="iconoblanco">
+        <div id="letra1"> <p>Your Reservation is complete!</p></div>
+        <div id="letra2"> <p> Come meet the robots on Saturday at 2pm <br> We can't wat to see you there!</p></div>
+        <div id="cuadro"> Make another reservation</div>
+    </div>
+
     
 </body>
 </html>
