--- a/REPASO DIA 3/index.html
+++ b/REPASO DIA 3/index.html
@@ -16,5 +16,15 @@
         <div id="letrae">E</div>
         <div id="letrar">R</div>
     </div>
+        <nav>
+            <input type="checkbox" id="menu1">
+            <label for="menu1"><img id="imagen1" src="imagen1/menu-regular-24.png"></label>
+          <ul>
+            <li><a href="index.html">LETRAS</a></li>
+            <li><a href="index2.html">NUBES</a></li>
+            <li><a href="index3.html">CAMINANTE</a></li>
+            <li><a href="index4.html">ROBOT</a></li>
+          </ul>
+        </nav>
 </body>
 </html>
